--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
   "name": "nodcam",
   "version": "1.0.0",
-  "description": "Access and stream web camera in nodejs using ffmpeg, websockets and HTML5.",
+  "description":
+    "Access and stream web camera in nodejs using ffmpeg, websockets and HTML5.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "express-server": "node index.js",
-    "streaming-server": "node stream.js 12345",
-    "ffmpeg": "ffmpeg -f vfwcap -video_size 640x480 -framerate 24 -i video='BisonCam, NB Pro':audio='Line In (2- High Definition Audio Device)'' abc.mp4 -movflags faststart -framerate 15 -vcodec mpeg1video -preset veryfast -maxrate 3000k -bufsize 4000k -c:a aac -b:a 160k -ar 44100 -b:a 128k -f mpeg1video http://localhost:8082/12345/640/480"
+    "test-server": "node index.js",
+    "server": "node stream.js 12345",
+    "stream":
+      "ffmpeg -f avfoundation -framerate 25 -i '0' -f mpegts -codec:v mpeg1video -codec:a mp2 -b 200k -r 30 -vf scale=640:480 http://localhost:8081/12345"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tahaipek/Nodcam.git"
   },
-  "keywords": [
-    "nodejs",
-    "webcam",
-    "camera",
-    "streaming"
-  ],
+  "keywords": ["nodejs", "webcam", "camera", "streaming"],
   "author": "Taha İPEK",
   "license": "ISC",
   "bugs": {
